# Avatar_ML

./: .env.example  .gitignore  Plan.md  README.md  pyproject.toml
.claude/: settings.local.json
notebooks/: colab_inference_server.ipynb
samples/: README.md
scripts/: create_avatar_profile.py  create_voice_profile.py  generate_video.py
services/api/: db.py  main.py  pipeline.py  remote_stream_consumer.py  settings.py
services/api/media/: aiortc_track.py
services/api/routes/: avatar_profiles.py  generate_video.py  profiles.py  sessions.py  voice_profiles.py  webrtc.py  ws_sessions.py
services/inference_client/: colab_worker_client.py
tests/: index.html  test_page.html
