[project]
name = "avatar-ml"
version = "0.1.0"
description = "Hybrid Windows + free Colab T4 real-time cloned-voice talking-head system (Phase 0)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "websockets>=13",
    "aiortc>=1.9",
    "av>=13",
    "numpy>=1.26",
    "Pillow>=10.4",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.uv]
# Lock to a known-good index. Add custom configuration here when needed.
